# PaScaL_TDMA_cpp

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  cuManyRHSTest.cpp  cuManyTest.cpp  many.cpp  manyRHS.cpp  single.cpp
examples/convection3D/: CMakeLists.txt  PARA_INPUT.inp  commLayout3D.hpp  convection3D.cpp  convectionSolver.cpp  convectionSolver.hpp  domainLayout3D.cpp  domainLayout3D.hpp  globalParams.hpp
examples/python/: cuMany.py  cuManyRHS.py  many.py  manyRHS.py  single.py
src/: CMakeLists.txt  PaScaL_TDMA.cpp  PaScaL_TDMA.cu  PaScaL_TDMA.cuh  PaScaL_TDMA.hpp  TDMASolver.cu  TDMASolver.cuh  TDMASolver.hpp
src/pybind/: CMakeLists.txt  cupyBinding.cpp  cupyBinding.hpp  pyBinding.cpp  pyBinding.hpp
tests/: CMakeLists.txt  testCuMany.cpp  testCuManyRHS.cpp  testMany.cpp  testManyRHS.cpp  testSingle.cpp
utils/: commLayout2D.hpp  cudaEnv.hpp  dimArray.hpp  util.hpp
